--- a/index.html
+++ b/index.html
@@ -53,9 +53,6 @@
 
 	<p><a href="https://bitbucket.org/ciafa-sw/firefront_video_experiments/src/doc/" target="_blank">Firefront Documentation</a></p>
 	<p><a href="https://drive.google.com/drive/u/0/folders/1iXVxSFEo9Seuqxdi8cehfbS4-oZ_ySCm" target="_blank">Firefront shared drive</a></p>
-
-	<p><a href="https://docs.google.com/spreadsheets/d/1PkCbHPZL15isUy1t98_Smya07fXlJZqwgsQjtw8a5aA/edit#gid=986409403" target="_blank">Alojamentos Mapa Geral</a></p>
-	<p><a href="https://docs.google.com/document/d/1vn7DcYn34FxOTm86AWBbC3eIHpgR_QMhb9qo2U-ZKdE/edit" target="_blank">Internato</a></p>    
 	
 	<p><a href="https://docs.google.com/spreadsheets/d/15EAcw_MduBwK-FjhLhNss2vG5VMHwt2BPHZ0qEYCT2A/edit#gid=1534277855" target="_blank">Planeamento COVID</a></p>
 	<p><a href="https://docs.google.com/spreadsheets/d/1lOvSeopVde8D3M-z51tZU2QcvGk7HKGxnqvnrJnHBag/edit#gid=794447412" target="_blank">Planeamento COVID Alunos</a></p>
@@ -65,11 +62,18 @@
 
       </div>
     </div>
+    <div class="row">
+      <div class="col">
+	      <h2>Área de Internato</h2>
+	      <p><a href="https://docs.google.com/spreadsheets/d/1PkCbHPZL15isUy1t98_Smya07fXlJZqwgsQjtw8a5aA/edit#gid=986409403" target="_blank">Alojamentos Mapa Geral</a></p>
+	<p><a href="https://docs.google.com/document/d/1vn7DcYn34FxOTm86AWBbC3eIHpgR_QMhb9qo2U-ZKdE/edit" target="_blank">Internato</a></p>
+      	<p><a href="https://docs.google.com/spreadsheets/d/1dbjJHVEEC7-wPpGJ95rstnulzCu6Oq8oHEkBOBxqniE/edit#gid=1373721190" target="_blank">Mapa Candidatos Verao 2020</a></p>
+      </div>
+    </div>
     <!-- Content here -->
 
 	<p><a href="" target="_blank">XXXX</a></p>
-	<p><a href="" target="_blank">XXXX</a></p>
-	<p><a href="" target="_blank">XXXX</a></p>
+	<p><a href="https://github.com/diogo-aos/LinkCity/edit/master/index.html" target="_blank">Edit this page</a></p>
 
 
 
