--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col" class="p-3 mb-2 bg-light text-dark">
 	      <h2>Área de Internato</h2>
 	      <p><a href="https://docs.google.com/spreadsheets/d/1PkCbHPZL15isUy1t98_Smya07fXlJZqwgsQjtw8a5aA/edit#gid=986409403" target="_blank">Alojamentos Mapa Geral</a></p>
 	<p><a href="https://docs.google.com/document/d/1vn7DcYn34FxOTm86AWBbC3eIHpgR_QMhb9qo2U-ZKdE/edit" target="_blank">Internato</a></p>
