--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <div class="container">
+  <div class="container"> <!-- CONTAINER -->
     <h1>LinkCity</h1>
     
     <p><a href="https://keep.google.com" target="_blank">Keep</a></p>
@@ -22,13 +22,8 @@
     <p><a href="https://web.whatsapp.com/" target="_blank">WhatsApp</a></p>
     <p><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank">Gmail</a></p>
 
-    <div class="row">
-      <div class="col">
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col">
+    <div class="row">  <!-- ROW 1 -->
+      <div class="col">  <!-- ROW 1 COL 1 -->
 	    <h2>Diogo</h2>
 	    <p><a href="https://drive.google.com/drive/folders/0B3EM8f4FmVDVd2lrYWFJbkh2eWM" target="_blank">0 Diogo</a></p>
 	    <p><a href="https://cmd.autenticacao.gov.pt/Ama.Authentication.Frontend/Processes/DigitalSignature/DigitalSignatureIntro.aspx" target="_blank">Assinar CC</a></p>
@@ -40,8 +35,8 @@
 	    <p><a href="https://docs.google.com/spreadsheets/d/1H7lU1d_l7HYTRibyRr5pFi37VgVFcyxwSi5H2DRyiUA/edit#gid=2075311051" target="_blank">BodyTrack</a></p>
 	    
 	<p><a href="https://app.youneedabudget.com/bcdfd0be-036e-4a44-b8eb-99830546c67d/budget" target="_blank">YNAB</a></p>
-      </div>
-      <div class="col">
+      </div> <!-- ROW 1 COL 1 -->
+      <div class="col"> <!-- ROW 1 COL 2 -->
 	<h2>FAP</h2>
 	<p><a href="https://docs.google.com/document/d/1RN7-aJjjItnyzVnSRQwMLdjYPrsOjIj0xmUjv3bQpH4/edit" target="_blank">OnTheJob</a></p>
 	<p><a href="https://drive.google.com/drive/u/0/folders/17KgcHZW_MtMIt4gJJbrmxbyEZ88rOcqR" target="_blank">CAL_GERAL</a></p>
@@ -58,31 +53,23 @@
 	<p><a href="https://docs.google.com/spreadsheets/d/1lOvSeopVde8D3M-z51tZU2QcvGk7HKGxnqvnrJnHBag/edit#gid=794447412" target="_blank">Planeamento COVID Alunos</a></p>
 	<p><a href="https://docs.google.com/spreadsheets/d/1kus-tEzYA0n15rUuiBgUi2Oo_qtjyhgiNMjBmGo0dk8/edit?usp=drive_web&ouid=112240959440930887189" target="_blank">Contactos</a></p>
 
-	
-
-      </div>
-    </div>
-    <div class="row">
-      <div class="col" class="p-3 mb-2 bg-light text-dark">
+      </div> <!-- ROW 1 COL 2 -->
+    </div> <!-- ROW 1 -->
+    <div class="row"> <!-- ROW 2 -->
+      <div class="col" class="p-3 mb-2 bg-light text-dark"> <!-- ROW 2 COL 1 -->
 	      <h2>Área de Internato</h2>
 	      <p><a href="https://docs.google.com/spreadsheets/d/1PkCbHPZL15isUy1t98_Smya07fXlJZqwgsQjtw8a5aA/edit#gid=986409403" target="_blank">Alojamentos Mapa Geral</a></p>
 	<p><a href="https://docs.google.com/document/d/1vn7DcYn34FxOTm86AWBbC3eIHpgR_QMhb9qo2U-ZKdE/edit" target="_blank">Internato</a></p>
       	<p><a href="https://docs.google.com/spreadsheets/d/1dbjJHVEEC7-wPpGJ95rstnulzCu6Oq8oHEkBOBxqniE/edit#gid=1373721190" target="_blank">Mapa Candidatos Verao 2020</a></p>
-      </div>
-    </div>
-    <!-- Content here -->
+      </div> <!-- ROW 2 COL 1 -->
+      <div class="col" class="p-3 mb-2 bg-light text-dark"> <!-- ROW 2 COL 2 -->
+      </div> <!-- ROW 2 COL 2 -->
+    </div> <!-- ROW 2 -->
 
 	<p><a href="" target="_blank">XXXX</a></p>
 	<p><a href="https://github.com/diogo-aos/LinkCity/edit/master/index.html" target="_blank">Edit this page</a></p>
 
-
-
-
-
-
-
-
-  </div>
+  </div>   <!-- CONTAINER -->
 
 
 </body>
