--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       <div class="col p-3 mb-2 bg-primary text-white" class="p-3 mb-2 bg-light text-dark"> <!-- ROW 2 COL 2 -->
 	  <h2>Utilities</h2>
 	  <p><a href="https://cmd.autenticacao.gov.pt/Ama.Authentication.Frontend/Processes/DigitalSignature/DigitalSignatureIntro.aspx" class="btn btn-info">Assinar CC</a></p>
+	  <p><a href="https://dicionario.priberam.org" class="btn btn-info">DLPO</a></p>
 		
 	    
       </div> <!-- ROW 2 COL 2 -->
