--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 	    
 	<p><a href="https://app.youneedabudget.com/bcdfd0be-036e-4a44-b8eb-99830546c67d/budget" class="btn btn-light " target="_blank">YNAB</a></p>
       </div> <!-- ROW 1 COL 1 -->
+	    <div class="col p-3 mb-2 bg-secondary text-white"> <!-- ROW 1 COL 2 -->
+		    <h2>CAL</h2>
+	    </div> <!-- ROW 1 COL 1 -->
+      
       <div class="col p-3 mb-2 bg-secondary text-white"> <!-- ROW 1 COL 2 -->
 	<h2>FAP</h2>
 	<p><a href="https://docs.google.com/document/d/1RN7-aJjjItnyzVnSRQwMLdjYPrsOjIj0xmUjv3bQpH4/edit" class="btn btn-warning" target="_blank">OnTheJob</a></p>
