--- a/index.html
+++ b/index.html
@@ -82,13 +82,15 @@
 		<div class="col p-3 mb-2 bg-warning text-dark" > <!-- ROW 2 COL 1 -->
 			<h2>Área de Internato</h2>
 			<p><a href="https://docs.google.com/spreadsheets/d/1PkCbHPZL15isUy1t98_Smya07fXlJZqwgsQjtw8a5aA/edit#gid=986409403" class="btn btn-secondary" target="_blank">Alojamentos Mapa Geral</a></p>
-			<p><a href="https://docs.google.com/document/d/1vn7DcYn34FxOTm86AWBbC3eIHpgR_QMhb9qo2U-ZKdE/edit" class="btn btn-secondary" target="_blank">Internato</a></p>
+			<p><a href="https://docs.google.com/document/d/1vn7DcYn34FxOTm86AWBbC3eIHpgR_QMhb9qo2U-ZKdE/edit" class="btn btn-secondary" target="_blank">Internato Principal</a></p>
 			<p><a href="https://docs.google.com/spreadsheets/d/1dbjJHVEEC7-wPpGJ95rstnulzCu6Oq8oHEkBOBxqniE/edit#gid=1373721190" class="btn btn-secondary" target="_blank">Mapa Candidatos Verao 2020</a></p>
+			<p><a href="https://docs.google.com/document/d/14DzfDypG4U-k18CdCz24FtbrH1YVjAIal2ES-TclxFM/edit#" class="btn btn-primary" target="_blank">Checklists</a></p>
 		</div> <!-- ROW 2 COL 1 -->
 		<div class="col p-3 mb-2 bg-secondary text-white"> <!-- ROW 2 COL 3 -->
 			<h2>CIAFA</h2>
 			<p><a href="https://bitbucket.org/ciafa-sw/firefront_video_experiments/src/doc/" class="btn btn-warning" target="_blank">Firefront Documentation</a></p>
 			<p><a href="https://drive.google.com/drive/u/0/folders/1iXVxSFEo9Seuqxdi8cehfbS4-oZ_ySCm" class="btn btn-warning" target="_blank">Firefront shared drive</a></p>
+
 		</div> <!-- ROW 2 COL 3 -->
 		<div class="col p-3 mb-2 bg-warning text-dark"> <!-- ROW 2 COL 4 -->
 			<h2>Teach</h2>
