--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 	    <h2>Diogo</h2>
 		<p><a href="https://drive.google.com/drive/folders/0B3EM8f4FmVDVd2lrYWFJbkh2eWM" class="btn btn-light " target="_blank">0 Diogo</a></p>
 		
-	    <p><a href="https://docs.google.com/spreadsheets/d/1bTrI2w5NQsC2WtfkEyi9DjOTgq9jtVjiOndJ6hWy9Os/edit#gid=1814797092" class="btn btn-light " target="_blank">FoodPlan</a></p>
-	    <p><a href="https://docs.google.com/spreadsheets/d/1uT4RsmSDOSmkEqfRnWkAwDodkWS09-fBS1Ll-rrC9Bs/edit?usp=drive_web&ouid=110151906367241589539" class="btn btn-light " target="_blank">ReadQueue</a></p>
-	    <p><a href="https://drive.google.com/drive/u/0/folders/1nlmPhw7KgqLkCvMpHG5_H9Aqs-SWOi4s2" class="btn btn-light " target="_blank">Reviews</a></p>
+	    <p><a href="https://docs.google.com/spreadsheets/d/1bTrI2w5NQsC2WtfkEyi9DjOTgq9jtVjiOndJ6hWy9Os?authuser=user@gmail.com" class="btn btn-light " target="_blank">FoodPlan</a></p>
+	    <p><a href="https://docs.google.com/spreadsheets/d/1uT4RsmSDOSmkEqfRnWkAwDodkWS09-fBS1Ll-rrC9Bs?authuser=user@gmail.com" class="btn btn-light " target="_blank">ReadQueue</a></p>
+	    <p><a href="https://drive.google.com/drive/u/0/folders/1nlmPhw7KgqLkCvMpHG5_H9Aqs-SWOi4s2?authuser=user@gmail.com" class="btn btn-light " target="_blank">Reviews</a></p>
     
-	    <p><a href="https://drive.google.com/drive/u/0/folders/0B3EM8f4FmVDVfnAteTdYM3V5YW1kU3YxY243bE5MN0dvb0ZqTjk4TF9HSll6TDJ2OTRFZG8" class="btn btn-light " target="_blank">2 Money</a></p>
-	    <p><a href="https://docs.google.com/spreadsheets/d/1H7lU1d_l7HYTRibyRr5pFi37VgVFcyxwSi5H2DRyiUA/edit#gid=2075311051" class="btn btn-light " target="_blank">BodyTrack</a></p>
+	    <p><a href="https://drive.google.com/drive/u/0/folders/0B3EM8f4FmVDVfnAteTdYM3V5YW1kU3YxY243bE5MN0dvb0ZqTjk4TF9HSll6TDJ2OTRFZG8?authuser=user@gmail.com" class="btn btn-light " target="_blank">2 Money</a></p>
+	    <p><a href="https://docs.google.com/spreadsheets/d/1H7lU1d_l7HYTRibyRr5pFi37VgVFcyxwSi5H2DRyiUA?authuser=user@gmail.com" class="btn btn-light " target="_blank">BodyTrack</a></p>
 	    
 		<p><a href="https://app.youneedabudget.com/bcdfd0be-036e-4a44-b8eb-99830546c67d/budget" class="btn btn-light " target="_blank">YNAB</a></p>
       </div> <!-- ROW 1 COL 1 -->
