--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <a href="https://todoist.com/app/" class="btn btn-primary" target="_blank">Todoist</a>
 	    <a href="https://todoist.com/app/" class="btn btn-primary" target="_blank">Todoist</a>
 
-    <a href="https://calendar.google.com/" class="btn btn-primary" target="_blank">Calendar</a>
+    <a href="https://calendar.google.com/" class="btn btn-primary" target="_blank">
+        <img src="cal.png" class="img-circle" alt="GCalendar" width="50px">
+    </a>
 
     <a href="https://web.whatsapp.com/" class="btn btn-primary" target="_blank">WhatsApp</a>
 	<a href="https://mail.google.com/mail/u/0/#inbox" class="btn btn-primary" target="_blank">Gmail</a>
