--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <div class="container"> <!-- CONTAINER -->
     <h1>LinkCity</h1>
     <a href="https://keep.google.com" class="btn btn-primary" target="_blank">Keep</a>
-    <a href="https://todoist.com/app/" class="btn btn-primary" target="_blank">Todoist</a>
+    <a href="https://todoist.com/app/"  target="_blank">Todoist</a>
 	    <a href="https://todoist.com/app/" class="btn btn-primary" target="_blank">Todoist</a>
 
-    <a href="https://calendar.google.com/" class="btn btn-primary" target="_blank">
+    <a href="https://calendar.google.com/" target="_blank">
         <img src="cal.png" class="img-circle" alt="GCalendar" width="50px">
     </a>
 
