--- a/index.html
+++ b/index.html
@@ -15,18 +15,28 @@
 
   <div class="container"> <!-- CONTAINER -->
     <h1>LinkCity</h1>
-    <a href="https://keep.google.com" class="btn btn-primary" target="_blank">Keep</a>
-    <a href="https://todoist.com/app/"  target="_blank">Todoist</a>
-	    <a href="https://todoist.com/app/" class="btn btn-primary" target="_blank">Todoist</a>
-
+    <a href="https://keep.google.com" target="_blank">
+	    <img src="gkeep.png" class="img-circle" alt="Keep" width="50px">
+    </a>
+	  
+    <a href="https://todoist.com/app/"  target="_blank">
+	    <img src="todoist.png" class="img-circle" alt="Todoist" width="50px">
+    </a>
+	  
     <a href="https://calendar.google.com/" target="_blank">
         <img src="cal.png" class="img-circle" alt="GCalendar" width="50px">
     </a>
 
-    <a href="https://web.whatsapp.com/" class="btn btn-primary" target="_blank">WhatsApp</a>
-	<a href="https://mail.google.com/mail/u/0/#inbox" class="btn btn-primary" target="_blank">Gmail</a>
-	<p></p>
-	<p></p>
+    <a href="https://web.whatsapp.com/" class="btn btn-primary" target="_blank">
+	  <img src="whatsapp.png" class="img-circle" alt="WhatsApp" width="50px">
+    </a>
+	  
+    <a href="https://mail.google.com/mail/u/0/#inbox" class="btn btn-primary" target="_blank">
+	    <img src="gmail.png" class="img-circle" alt="Gmail" width="50px">
+    </a>
+	  
+    <p></p>
+    <p></p>
 
     <div class="row">  <!-- ROW 1 -->
 	
@@ -60,7 +70,9 @@
 		<h1>FAP</h1>
 		<p><a href="https://drive.google.com/drive/folders/1m0BOFmBYbQ_HFFo6ByEMU2Dhe1SnHlvv" class="btn btn-dark" target="_blank">1 FAP</a></p>
 		<p><a href="https://docs.google.com/document/d/1RN7-aJjjItnyzVnSRQwMLdjYPrsOjIj0xmUjv3bQpH4/edit" class="btn btn-dark" target="_blank">OnTheJob</a></p>
-		<p><a href="https://webmail.emfa.pt/" class="btn btn-dark" target="_blank">Groupwise</a></p>
+		<p><a href="https://webmail.emfa.pt/" target="_blank">
+		    <img src="novell_gw.png" class="img-circle" alt="GroupWise" width="50px">
+		</a></p>
 		<p><a href="https://portalfap.emfa.pt/" class="btn btn-dark" target="_blank">Portal FAP</a></p>
 		
 		
