--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <img src="cal.png" class="img-circle" alt="GCalendar" width="50px">
     </a>
 
-    <a href="https://web.whatsapp.com/" class="btn btn-primary" target="_blank">
+    <a href="https://web.whatsapp.com/"  target="_blank">
 	  <img src="whatsapp.png" class="img-circle" alt="WhatsApp" width="50px">
     </a>
 	  
-    <a href="https://mail.google.com/mail/u/0/#inbox" class="btn btn-primary" target="_blank">
+    <a href="https://mail.google.com/mail/u/0/#inbox"  target="_blank">
 	    <img src="gmail.png" class="img-circle" alt="Gmail" width="50px">
     </a>
 	  
