--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </header>
 
 <body>
+  <script>
+
+  </script>
 
   <div class="container"> <!-- CONTAINER -->
     <h1>LinkCity</h1>
@@ -94,11 +97,21 @@
 			
 	    </div> <!-- ROW 2 COL 2 -->
 		<div class="col p-3 mb-2 bg-warning text-dark" > <!-- ROW 2 COL 1 -->
+			<!--
+                        * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+                        * * * * * * * * *     INTERNATO * * * * * * * * * * * *
+                        * * * * * * * * * * * * * * * * * * * * * * * * * * * *
+                        -->
 			<h2>Área de Internato</h2>
+			<p><a href="https://docs.google.com/document/d/1vn7DcYn34FxOTm86AWBbC3eIHpgR_QMhb9qo2U-ZKdE/edit" class="btn btn-secondary" target="_blank">COMEÇAR AQUI</a></p>
 			<p><a href="https://docs.google.com/spreadsheets/d/1PkCbHPZL15isUy1t98_Smya07fXlJZqwgsQjtw8a5aA/edit#gid=986409403" class="btn btn-secondary" target="_blank">Alojamentos Mapa Geral</a></p>
-			<p><a href="https://docs.google.com/document/d/1vn7DcYn34FxOTm86AWBbC3eIHpgR_QMhb9qo2U-ZKdE/edit" class="btn btn-secondary" target="_blank">Internato Principal</a></p>
-			<p><a href="https://docs.google.com/spreadsheets/d/1dbjJHVEEC7-wPpGJ95rstnulzCu6Oq8oHEkBOBxqniE/edit#gid=1373721190" class="btn btn-secondary" target="_blank">Mapa Candidatos Verao 2020</a></p>
+			<p><a href="https://docs.google.com/spreadsheets/u/1/d/12id0lmuaLKXLXz22UL7W8jgPBEG7zGZsgm4_--pREjY" class="btn btn-primary" target="_blank">Gestão anomalias</a></p>
 			<p><a href="https://docs.google.com/document/d/14DzfDypG4U-k18CdCz24FtbrH1YVjAIal2ES-TclxFM/edit#" class="btn btn-primary" target="_blank">Checklists</a></p>
+			<p><a href="https://docs.google.com/document/d/1je9lR-rtsGzWSg-p5SBIPxXPIUHRDQ0bGmM05V6n7Ms" class="btn btn-primary" target="_blank">Plano 20/21</a></p>
+			<p><a href="https://docs.google.com/spreadsheets/d/1dbjJHVEEC7-wPpGJ95rstnulzCu6Oq8oHEkBOBxqniE/edit#gid=1373721190" class="btn btn-secondary" target="_blank">Mapa Candidatos Verao 2020</a></p>
+
+			
+			
 		</div> <!-- ROW 2 COL 1 -->
 		<div class="col p-3 mb-2 bg-secondary text-white"> <!-- ROW 2 COL 3 -->
 			<h2>CIAFA</h2>
