--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     
 	    <p><a href="https://drive.google.com/drive/u/0/folders/0B3EM8f4FmVDVfnAteTdYM3V5YW1kU3YxY243bE5MN0dvb0ZqTjk4TF9HSll6TDJ2OTRFZG8?authuser=user@gmail.com" class="btn btn-light " target="_blank">2 Money</a></p>
 	    <p><a href="https://docs.google.com/spreadsheets/d/1H7lU1d_l7HYTRibyRr5pFi37VgVFcyxwSi5H2DRyiUA?authuser=user@gmail.com" class="btn btn-light " target="_blank">BodyTrack</a></p>
+	    <p><a href="https://github.com/diogo-aos/repo_structure/" class="btn btn-light " target="_blank">Github</a></p>
 	    
 		<p><a href="https://app.youneedabudget.com/bcdfd0be-036e-4a44-b8eb-99830546c67d/budget" class="btn btn-light " target="_blank">YNAB</a></p>
       </div> <!-- ROW 1 COL 1 -->
