--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 	  <div class="col p-3 mb-2 bg-primary text-white" class="p-3 mb-2 bg-light text-dark"> <!-- ROW 2 COL 2 -->
 		  <h2>Utilities</h2>
 		  <p><a href="https://cmd.autenticacao.gov.pt/Ama.Authentication.Frontend/Processes/DigitalSignature/DigitalSignatureIntro.aspx" class="btn btn-info">Assinar CC</a></p>
-		  <p><a href="https://dicionario.priberam.org" class="btn btn-info">DLPO</a></p>
+		  <p><a href="https://www.coursera.org/learn/c-plus-plus-a/home/welcome" class="btn btn-info">DLPO</a></p>
+		  <p><a href="https://www.coursera.org/learn/mountains-101/home/welcome" class="btn btn-info">Coursera Mountains</a></p>
       </div> <!-- ROW 2 COL 2 -->
 	  
 
