--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 		    <img src="novell_gw.png" class="img-circle" alt="GroupWise" width="50px">
 		</a></p>
 		<p><a href="https://portalfap.emfa.pt/" class="btn btn-dark" target="_blank">Portal FAP</a></p>
+		<p><a href="https://docs.google.com/spreadsheets/d/1JeXejrM6qkr9_NmsAiSJHW85-76FVIEmrwdOBaV5T4o/edit?usp=drive_web&ouid=110151906367241589539" class="btn btn-dark" target="_blank">Tarefas</a></p>
 		
 		
 
