--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
 		  <h2>Utilities</h2>
 		  <p><a href="https://cmd.autenticacao.gov.pt/Ama.Authentication.Frontend/Processes/DigitalSignature/DigitalSignatureIntro.aspx" class="btn btn-info">Assinar CC</a></p>
 		  <p><a href="https://dicionario.priberam.org/" class="btn btn-info">DLPO</a></p>
-		  <p><a href="https://www.coursera.org/learn/c-plus-plus-a/home/welcome" class="btn btn-info">Coursera C++</a></p>
-		  <p><a href="https://www.coursera.org/learn/mountains-101/home/welcome" class="btn btn-info">Coursera Mountains</a></p>
+		  <p><a href="https://www.coursera.org/learn/c-plus-plus-a/home/welcome" class="btn btn-info" target="_blank">Coursera C++</a></p>
+		  <p><a href="https://www.coursera.org/learn/mountains-101/home/welcome" class="btn btn-info" target="_blank">Coursera Mountains</a></p>
+		  <p><a href="https://repl.it/" class="btn btn-info" target="_blank">REPL</a></p>
       </div> <!-- ROW 2 COL 2 -->
 	  
 
