--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 		</div> <!-- ROW 2 COL 3 -->
 		<div class="col p-3 mb-2 bg-warning text-dark"> <!-- ROW 2 COL 4 -->
 			<h2>Teach</h2>
-			<p><a href="" class="btn btn-secondary" target="_blank">PROG 1920</a></p>
-			<p><a href="" class="btn btn-secondary" target="_blank">LMI 1920</a></p>
+			<p><a href="https://drive.google.com/drive/folders/0Bwk4eDs4Tsq6dHNKYlRkYWF4dms" class="btn btn-secondary" target="_blank">PROG</a></p>
+			<p><a href="https://drive.google.com/drive/folders/1zENQ6L_P6pOlSkfcxdzp8FBRj3bYA_eX" class="btn btn-secondary" target="_blank">LMI</a></p>
 		</div> <!-- ROW 2 COL 4 -->
 	</div> <!-- ROW 2 -->
 
