--- a/books.html
+++ b/books.html
@@ -1,1 +1,38 @@
+<header>
 
+<!-- CSS only -->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+<!-- JS, Popper.js, and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
+  
+</header>
+
+<body>
+  <script>
+
+  </script>
+
+  <div class="container"> <!-- CONTAINER -->
+    <h1>Recommended List</h1>
+
+    <p>Gödel, Escher, Bach: an Eternal Golden Braid - Douglas Hofstadter</p>
+		<p>Lessons From History - Will Durant</p>
+    <p>Guns, Germs and Steel - Jared Diamond</p>
+    <p>Meditations - Marcus Aurelius</p>
+    <p>How to Change Your Mind - Michael Pollan</p>
+    <p>Why We Sleep - Matthew Walker</p>
+    <p>Dune - Frank Herbert</p>
+    <p>Foundation Trilogy - Isaac Asimov</p>
+    <p>Essentialism: The Disciplined Pursuit of Less - Greg McKeown</p>
+    
+
+
+
+  </div>   <!-- CONTAINER -->
+
+
+</body>
