--- a/books.html
+++ b/books.html
@@ -19,7 +19,8 @@
     <h1>Recommended List</h1>
 
     <p>Gödel, Escher, Bach: an Eternal Golden Braid - Douglas Hofstadter</p>
-		<p>Lessons From History - Will Durant</p>
+    <p>Zen and the Art of Motorcycle Maintenance - Robert Pirsig</p>
+    <p>Lessons From History - Will Durant</p>
     <p>Guns, Germs and Steel - Jared Diamond</p>
     <p>Meditations - Marcus Aurelius</p>
     <p>How to Change Your Mind - Michael Pollan</p>
