books of 2019 and 2018

--- a/the_book_list.html
+++ b/the_book_list.html
@@ -64,6 +64,52 @@
 <p>	01 - L01 - The Longevity Diet [ler 317p]	</p>
    
  
-    
-</div>
+    <h2>	2019	</h2>
+<p>	18 - Finite and Infinite Games audio (ler)	</p>
+<p>	17 - The Fifth Season (Broke Earth #1)	</p>
+<p>	16 - Death by Black Hole	</p>
+<p>	15 - Principles: Life and Work audio (procurar resumos)	</p>
+<p>	14 - Man's Search for Meaning (comprar)	</p>
+<p>	13 - Stories of Your life	</p>
+<p>	12 - Slow Sex	</p>
+<p>	11 - Data Minimalism	</p>
+<p>	10 - Range	</p>
+<p>	9 - Tell Me What You Want	</p>
+<p>	8 - Triggers	</p>
+<p>	7 - The man in the high castle	</p>
+<p>	6 - Good Omens	</p>
+<p>	5 - The Art of Fermentation	</p>
+<p>	4 - My first summer in the Sierra	</p>
+<p>	3 - The Songs of Trees	</p>
+<p>	2 - Tae Te Ching (audiobook)	</p>
+<p>	1 - The Living Mountain	</p>
+   
+   <h2>	2018	</h2>
+<p>	26 - How to read a book (Pending review)	</p>
+<p>	25 - The Graveyard Book	</p>
+<p>	24 - Mycelium Running (Pending review, last chapter skipped)	</p>
+<p>	23 - Zen in the Art of Archery (Pending review)	</p>
+<p>	22 - Artificial Condition	</p>
+<p>	21 - Being a Dog (Pending review)	</p>
+<p>	20 - In Defense of Food (Pending review)	</p>
+<p>	19 - Siddhartha (Pending review)	</p>
+<p>	18 - Eat Stop Eat (Pending review)	</p>
+<p>	17 - Why We Sleep (Pending review)	</p>
+<p>	16 - Models (Pending review)	</p>
+<p>	15 - How To Change Your Mind (Pending review)	</p>
+<p>	14 - One Bullet Away (Pending review)	</p>
+<p>	13 - Extreme Ownership (Pending review)	</p>
+<p>	12 - Deep Work (Pending review)	</p>
+<p>	11 - When: The Scientific Secrets of Perfect Timing (Pending review)	</p>
+<p>	10 - The Start-Up of You (Pending review)	</p>
+<p>	09 - Flavor (Pending Review)	</p>
+<p>	08 - I Contain Multitudes (Pending Review)	</p>
+<p>	07 - The Bonobo and the Atheist (Pending Review)	</p>
+<p>	06 - Homo Deus (Pending Review)	</p>
+<p>	05 - All Systems Red	</p>
+<p>	04 - The Salt Fix (Pending Review)	</p>
+<p>	03 - Extra Virginity (Pending Review)	</p>
+<p>	02 - Mating In Captivity (Reviewed)	</p>
+<p>	01 - GEB	</p>
+
 </body>
