--- a/the_book_list.html
+++ b/the_book_list.html
@@ -112,4 +112,120 @@
 <p>	02 - Mating In Captivity (Reviewed)	</p>
 <p>	01 - GEB	</p>
 
+   <h2>		2017		</h2>
+<p>	15	 - 	Logicomix: An Epic Search for Truth	</p>
+<p>	14	 - 	Why Buddhism is True: The Science and Philosophy of Meditation and Enlightenment	</p>
+<p>	13	 - 	Nexus (Nexus, #1)	</p>
+<p>	12	 - 	Tripping Over the Truth: The Metabolic Theory of Cancer	</p>
+<p>	11	 - 	Death's End (Remembrance of Earth’s Past #3)	</p>
+<p>	10	 - 	The Complete Guide to Fasting: Heal Your Body Through Intermittent, Alternate-Day, and Extended Fasting	</p>
+<p>	9	 - 	The Dark Forest (Remembrance of Earth’s Past, #2)	</p>
+<p>	8	 - 	The Three-Body Problem (Remembrance of Earth’s Past #1)	</p>
+<p>	7	 - 	The Storytelling Animal: How Stories Make Us Human	</p>
+<p>	6	 - 	Sapiens: A Brief History of Humankind	</p>
+<p>	5	 - 	Screenwriting 101 by Film Crit Hulk!	</p>
+<p>	4	 - 	Born to Run: A Hidden Tribe, Superathletes, and the Greatest Race the World Has Never Seen	</p>
+<p>	3	 - 	The Shock Doctrine: The Rise of Disaster Capitalism	</p>
+<p>	2	 - 	Lying	</p>
+<p>	1	 - 	Free Will	</p>
+   
+   
+<h2>		2016		</h2>
+<p>	7	 - 	The Dictator's Handbook: Why Bad Behavior is Almost Always Good Politics	</p>
+<p>	6	 - 	The Moral Landscape: How Science Can Determine Human Values	</p>
+<p>	5	 - 	Waking Up: A Guide to Spirituality Without Religion	</p>
+<p>	4	 - 	Meditations	</p>
+<p>	3	 - 	An Astronaut's Guide to Life on Earth	</p>
+<p>	2	 - 	God Emperor of Dune (Dune Chronicles #4)	</p>
+<p>	1	 - 	Thinking, Fast and Slow	</p>
+
+<h2>	<2016	</h2>
+<p>	A Game of Thrones (A Song of Ice and Fire, #1)	</p>
+<p>	A Hologram for the King	</p>
+<p>	A Journey to the Center of the Earth	</p>
+<p>	A Tale of Two Cities	</p>
+<p>	American Gods (American Gods, #1)	</p>
+<p>	Animal Farm	</p>
+<p>	Brave New World	</p>
+<p>	Children of Dune (Dune Chronicles #3)	</p>
+<p>	Children of the Mind (Ender's Saga, #4)	</p>
+<p>	Critical Chain	</p>
+<p>	Dataclysm: Who We Are	</p>
+<p>	Deep Work: Rules for Focused Success in a Distracted World	</p>
+<p>	Dune (Dune Chronicles, #1)	</p>
+<p>	Dune Messiah (Dune Chronicles #2)	</p>
+<p>	East of Eden	</p>
+<p>	Emma	</p>
+<p>	Ender's Game (Ender's Saga, #1)	</p>
+<p>	Ender's Shadow (The Shadow Series, #1)	</p>
+<p>	Essentialism: The Disciplined Pursuit of Less	</p>
+<p>	Fahrenheit 451	</p>
+<p>	Faz o Curso na Maior	</p>
+<p>	Five Weeks in a Balloon (Extraordinary Voyages, #1)	</p>
+<p>	Foundation (Foundation, #1)	</p>
+<p>	Foundation and Empire (Foundation #2)	</p>
+<p>	Foundation's Edge (Foundation #4)	</p>
+<p>	Freedom Evolves	</p>
+<p>	Ganhar com as Apostas Desportivas	</p>
+<p>	Ganhar em Bolsa	</p>
+<p>	God Is Not One: The Eight Rival Religions That Run the World--and Why Their Differences Matter	</p>
+<p>	Guns, Germs, and Steel: The Fates of Human Societies	</p>
+<p>	How to Become a Straight-A Student	</p>
+<p>	How to Win Friends and Influence People	</p>
+<p>	I Am Legend and Other Stories	</p>
+<p>	Ishmael: An Adventure of the Mind and Spirit (Ishmael, #1)	</p>
+<p>	iWoz	</p>
+<p>	Making History - Stephen Fry	</p>
+<p>	Mastermind: How to Think Like Sherlock Holmes	</p>
+<p>	Natural Born Heroes: How a Daring Band of Misfits Mastered the Lost Secrets of Strength and Endurance	</p>
+<p>	On the Road	</p>
+<p>	One Hundred Years of Solitude	</p>
+<p>	Os Maias	</p>
+<p>	Pride and Prejudice	</p>
+<p>	Quiet: The Power of Introverts in a World That Can't Stop Talking	</p>
+<p>	Rework	</p>
+<p>	Robinson Crusoe	</p>
+<p>	Second Foundation (Foundation #3)	</p>
+<p>	Sense and Sensibility	</p>
+<p>	Shadow of the Hegemon (The Shadow Series, #2)	</p>
+<p>	Slaughterhouse-Five	</p>
+<p>	Space Chronicles: Facing the Ultimate Frontier	</p>
+<p>	Spd Rdng	</p>
+<p>	Speaker for the Dead (Ender's Saga, #2)	</p>
+<p>	Stranger in a Strange Land	</p>
+<p>	Surely You're Joking, Mr. Feynman!: Adventures of a Curious Character	</p>
+<p>	The 7 Habits of Highly Effective People: Powerful Lessons in Personal Change	</p>
+<p>	The Alchemist	</p>
+<p>	The Art of Learning: A Journey in the Pursuit of Excellence	</p>
+<p>	The Art of War Machiavelli	</p>
+<p>	The Art of War Sun Tzu	</p>
+<p>	The Book Thief	</p>
+<p>	The Colour of Magic (Discworld, #1)	</p>
+<p>	The Definitive Book of Body Language	</p>
+<p>	The Dice Man	</p>
+<p>	The Fault in Our Stars	</p>
+<p>	The Grand Design	</p>
+<p>	The Graveyard Book	</p>
+<p>	The Great Gatsby	</p>
+<p>	The Hitchhiker's Guide to the Galaxy (Hitchhiker's Guide to the Galaxy, #1)	</p>
+<p>	The Judgement and In the Penal Colony	</p>
+<p>	The Karamazov Brothers	</p>
+<p>	The Last Question	</p>
+<p>	The Martian	</p>
+<p>	The Martian Chronicles	</p>
+<p>	The Master Algorithm: How the Quest for the Ultimate Learning Machine Will Remake Our World	</p>
+<p>	The Metamorphosis	</p>
+<p>	The Old Man and the Sea	</p>
+<p>	The Power of Habit: Why We Do What We Do in Life and Business	</p>
+<p>	The Restaurant at the End of the Universe (Hitchhiker's Guide to the Galaxy, #2)	</p>
+<p>	The Selfish Gene	</p>
+<p>	The Strange Order of Things: Life, Feeling, and the Making of Cultures	</p>
+<p>	The Stranger	</p>
+<p>	The Symposium	</p>
+<p>	The Time Machine	</p>
+<p>	To Sell Is Human: The Surprising Truth About Moving Others	</p>
+<p>	Walden	</p>
+<p>	Xenocide (Ender's Saga, #3)	</p>
+<p>	Zen and the Art of Motorcycle Maintenance: An Inquiry Into Values (Phaedrus, #1)	</p>
+   
 </body>
