--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 
   <div class="container"> <!-- CONTAINER -->
     <h1>LinkCity</h1>
+    <p>
+	<a href="https://books.diogoaos.eu" class="btn btn-light " target="_blank">Recommended List</a>
+	<a href="https://reading.diogoaos.eu" class="btn btn-light " target="_blank">Reading</a>
+    </p>
+	  <p>
     <a href="https://keep.google.com" target="_blank">
 	    <img src="gkeep.png" class="img-circle" alt="Keep" width="50px">
     </a>
@@ -37,6 +42,7 @@
     <a href="https://mail.google.com/mail/u/0/#inbox"  target="_blank">
 	    <img src="gmail.png" class="img-circle" alt="Gmail" width="50px">
     </a>
+		  </p>
 	  
     <p></p>
     <p></p>
@@ -51,7 +57,7 @@
 		
 	    <p><a href="https://docs.google.com/spreadsheets/d/1bTrI2w5NQsC2WtfkEyi9DjOTgq9jtVjiOndJ6hWy9Os?authuser=akins.daos@gmail.com" class="btn btn-light " target="_blank">FoodPlan</a></p>
 	    <p><a href="https://docs.google.com/spreadsheets/d/1uT4RsmSDOSmkEqfRnWkAwDodkWS09-fBS1Ll-rrC9Bs?authuser=akins.daos@gmail.com" class="btn btn-light " target="_blank">ReadQueue</a></p>
-	    <p><a href="https://drive.google.com/drive/u/0/folders/1nlmPhw7KgqLkCvMpHG5_H9Aqs-SWOi4s2?authuser=akins.daos@gmail.com" class="btn btn-light " target="_blank">Reviews</a></p>
+	    <p><a href="https://drive.google.com/drive/folders/1nlmPhw7KgqLkCvMpHG5_H9Aqs-SWOi4s?authuser=akins.daos@gmail.com" class="btn btn-light " target="_blank">Reviews</a></p>
     
 	    
 	    <p><a href="https://docs.google.com/spreadsheets/d/1H7lU1d_l7HYTRibyRr5pFi37VgVFcyxwSi5H2DRyiUA?authuser=akins.daos@gmail.com" class="btn btn-light " target="_blank">BodyTrack</a></p>
