--- a/the_book_list.html
+++ b/the_book_list.html
@@ -4,72 +4,72 @@
 <body>
    <h1>Read Queue</h1>
    <h2>2020 September</h2>
-<p>	? - L15 - Farewell to Arms	</p>
-<p>	? - A35 - Algorithms to Live By	</p>
-<p>	49 - L14 - Way of Peaceful Warrior Follow Up [ XXXp]	</p>
+<p>	? - L15 - Farewell to Arms	[252p] </p>
+<p>	? - A35 - Algorithms to Live By [11h50]	</p>
+<p>	49 - L14 - Sacred Journey of the Peaceful Warrior [249p]	</p>
    <h2>2020 August</h2>
 <p>	48 - A34 - Caffeine Michael Pollan [2h00m]	</p>
 <p>	47 - L13 - Infinite Powers How Calculus Reveals the Secrets of the World [ler 389p]	</p>
-<p>	46 - A33 - Creativity Inc. [XXhYYm]	</p>
-<p>	45 - A32 - Side Hustle: From Idea to Income in 27 Days [XXhYYm]	</p>
-<p>	44  - A31 - The Phoenix Project [XXhYYm]	</p>
-<p>	43 - A30 - Drawdown [XXhYYm]	</p>
-<p>	42 - A29 - Autobiography of Benjamin Franklin [XXhYYm]	</p>
+<p>	46 - A33 - Creativity Inc. [12h52]	</p>
+<p>	45 - A32 - Side Hustle: From Idea to Income in 27 Days [4h51]	</p>
+<p>	44  - A31 - The Phoenix Project [14h46]	</p>
+<p>	43 - A30 - Drawdown [18h53]	</p>
+<p>	42 - A29 - Autobiography of Benjamin Franklin [6h35]	</p>
 <p>	41 - A28 - Merchants of Doubt [XXhYYm]	</p>
    <h2>2020 July</h2>
-<p>	40 - A27 - Killing Rommel [XXhYYm]	</p>
+<p>	40 - A27 - Killing Rommel [10h22]	</p>
    <h2>2020 June</h2>
-<p>	39 - A26 - Solve for Happy [XXhYYm]	</p>
+<p>	39 - A26 - Solve for Happy [11h02]	</p>
 <p>	37 - L12 - The Way of the Peaceful Warrior [240p]	</p>
 <p>	36 - A25 - Superintelligence [14h17m]	</p>
 <p>	35 - L11 - Ferdydurke [308p]	</p>
-<p>	34 - A24 - The Invisible Hook	</p>
+<p>	34 - A24 - The Invisible Hook	[7h40]</p>
 <p>	33 - A23 - The Bogleheads Guide to Investing [10h3m]	</p>
 <p>	32 - A22 - The Obsticle is The Way [6h7m]	</p>
 <p>	31- A21 - Newton James Gleick [5h45]	</p>
    <h2>2020 May</h2>
 <p>	30 - A20 - Personal MBA [13h25m] -> reler capitulos com frequência	</p>
-<p>	29 - A19 - Economics in on lesson [audio 6h55]	</p>
-<p>	28 - A18 - Enlightment Now - Stephen Pinker [audio 19h49]	</p>
-<p>	27 - L10 - The Road - Cormac McArthy [ler 324p]	</p>
-<p>	26 - A17 - Shoe Dog - Phil Knight [audio 13h21]	</p>
-<p>	25 - A16 - The Gene [audio 19h20]	</p>
-<p>	24 - L09 - On the Psychology of Military Incompetence [ler 528p]	</p>
+<p>	29 - A19 - Economics in on lesson [6h55]	</p>
+<p>	28 - A18 - Enlightment Now - Stephen Pinker [19h49]	</p>
+<p>	27 - L10 - The Road - Cormac McArthy [324p]	</p>
+<p>	26 - A17 - Shoe Dog - Phil Knight [13h21]	</p>
+<p>	25 - A16 - The Gene [19h20]	</p>
+<p>	24 - L09 - On the Psychology of Military Incompetence [528p]	</p>
    <h2>2020 April</h2>
-<p>	23 - A15 - I Will Teach You to be Rich - Ramit Sethi [audio 12h08]	</p>
-<p>	22 - A14 - Loonshots - Sari Bahcal [audio 10h14]	</p>
-<p>	21 - A13 - SuperFreakonomics [audio 7h28]	</p>
-<p>	20 - A12 - Giants of Political Thought Wealth of Nations [audio 5h07]	</p>
-<p>	19 - A11 - Four hour workweek - Tim Feriss[audio 8h19]	</p>
+<p>	23 - A15 - I Will Teach You to be Rich - Ramit Sethi [12h08]	</p>
+<p>	22 - A14 - Loonshots - Sari Bahcal [10h14]	</p>
+<p>	21 - A13 - SuperFreakonomics [7h28]	</p>
+<p>	20 - A12 - Giants of Political Thought Wealth of Nations [5h07]	</p>
+<p>	19 - A11 - Four hour workweek - Tim Feriss[8h19]	</p>
    <h2>2020 March</h2>
-<p>	18 - A10 - The Road to Character [audio 12h17]	</p>
-<p>	17 - L08 - Call of the Wild - Jack London [ler 232p]	</p>
-<p>	16 - A09 - Concious - Hanaka Arris [audio 2h20] -> ler Cp 5,6,7	</p>
-<p>	15 - A08 - Your money or your life [audio 11h20]	</p>
-<p>	14 - L07 - Self-Hypnosis and Other Mind-Expanding Techniques [ler 140p]	</p>
-<p>	13 - A07 - Shantaram [audio 42h]	</p>
-<p>	12 - L06 - Presence - Amy Cuddy [ler 353p]	</p>
+<p>	18 - A10 - The Road to Character [12h17]	</p>
+<p>	17 - L08 - Call of the Wild - Jack London [232p]	</p>
+<p>	16 - A09 - Concious - Hanaka Arris [2h20] -> ler Cp 5,6,7	</p>
+<p>	15 - A08 - Your money or your life [11h20]	</p>
+<p>	14 - L07 - Self-Hypnosis and Other Mind-Expanding Techniques [140p]	</p>
+<p>	13 - A07 - Shantaram [42h59]	</p>
+<p>	12 - L06 - Presence - Amy Cuddy [353p]	</p>
    <h2>2020 February</h2>
-<p>	11 - L05 - Body by Science [ler 306p]	</p>
-<p>	10 - A06 - 21 lessons for the 21st century [audio 11h40]	</p>
-<p>	09 - L04 - Broken Earth #3 The Stone Sky [ler 464p ]	</p>
-<p>	08 - A05 - Antifragile [audio 16h14] -> ler	</p>
+<p>	11 - L05 - Body by Science [306p]	</p>
+<p>	10 - A06 - 21 lessons for the 21st century [11h40]	</p>
+<p>	09 - L04 - Broken Earth #3 The Stone Sky [464p ]	</p>
+<p>	08 - A05 - Antifragile [16h14] -> ler	</p>
    <h2>2020 January</h2>
-<p>	07 - L03 - Awareness - Anthony de Mello [ler  193p] -> comprar	</p>
-<p>	06 - A04 - Leaders Eat Last [audio 9h23]	</p>
-<p>	05 - L02 - Broken Earth #2 Obelisk Gate [ler 448p]	</p>
-<p>	04 - A03 - The Five Love Languages [audio 4h46]	</p>
-<p>	03 - A02 - Freakonomics [audio 315p]	</p>
-<p>	02 - A01 - Lessons From History [audio 5h33]	</p>
-<p>	01 - L01 - The Longevity Diet [ler 317p]	</p>
+<p>	07 - L03 - Awareness - Anthony de Mello [ 193p] -> comprar	</p>
+<p>	06 - A04 - Leaders Eat Last [9h23]	</p>
+<p>	05 - L02 - Broken Earth #2 Obelisk Gate [448p]	</p>
+<p>	04 - A03 - The Five Love Languages [4h46]	</p>
+<p>	03 - A02 - Freakonomics [315p]	</p>
+<p>	02 - A01 - Lessons From History [5h33]	</p>
+<p>	01 - L01 - The Longevity Diet [317p]	</p>
    
  
     <h2>	2019	</h2>
-<p>	18 - Finite and Infinite Games audio (ler)	</p>
+<p>	18 - Finite and Infinite Games 	</p>
 <p>	17 - The Fifth Season (Broke Earth #1)	</p>
 <p>	16 - Death by Black Hole	</p>
-<p>	15 - Principles: Life and Work audio (procurar resumos)	</p>
-<p>	14 - Man's Search for Meaning (comprar)	</p>
+<p>	15 - Principles: Life and Work audio	</p>
+<p>	14 - Man's Search for Meaning	</p>
 <p>	13 - Stories of Your life	</p>
 <p>	12 - Slow Sex	</p>
 <p>	11 - Data Minimalism	</p>
