--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <div class="container"> <!-- CONTAINER -->
     <h1>LinkCity</h1>
     <p>
-	<a href="https://books.diogoaos.eu" class="btn btn-light " target="_blank">Recommended List</a>
-	<a href="https://reading.diogoaos.eu" class="btn btn-light " target="_blank">Reading</a>
+	<a href="https://favorites.diogoaos.eu" class="btn btn-light " target="_blank">Favorites</a>
+	<a href="https://books.diogoaos.eu" class="btn btn-light " target="_blank">Books</a>
     </p>
 	  <p>
     <a href="https://keep.google.com" target="_blank">
