--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
   <div class="container"> <!-- CONTAINER -->
     <h1>LinkCity</h1>
     <p>
-	<a href="https://favorites.diogoaos.eu" class="btn btn-light " target="_blank">Favorites</a>
-	<a href="https://books.diogoaos.eu" class="btn btn-light " target="_blank">Books</a>
+	<a href="https://diogo-aos.github.io" class="btn btn-light " target="_blank">Home</a>
+	<a href="https://diogo-aos.github.io/LinkCity/books.html" class="btn btn-light " target="_blank">Favorites</a>
+	<a href="https://diogo-aos.github.io/LinkCity/the_book_list.html" class="btn btn-light " target="_blank">Books</a>
     </p>
 	  <p>
     <a href="https://keep.google.com" target="_blank">
