--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 			<p><a href="https://docs.google.com/document/d/1nc23T2iRwRdovNCU_Wz98ZXbfCwzs3Vm/edit" class="btn btn-warning" target="_blank">Agenda</a></p>
 			
 <div class="btn-group" role="group" aria-label="Basic example">
-  <button type="button" class="btn btn-secondary" href="https://docs.google.com/spreadsheets/d/1kuu4KAE9U3_Yv5iaUZW2Bqc7tz9BxY1opzAZAUDwtxg/edit">2a Sit.</button>
-  <button type="button" class="btn btn-secondary" href="https://drive.google.com/drive/u/0/folders/1YKm9GaQIgMzo_XDvwvAqeHZNe1vXLXb0">2a Pasta</button>
+  <button type="button" class="btn btn-warning" href="https://docs.google.com/spreadsheets/d/1kuu4KAE9U3_Yv5iaUZW2Bqc7tz9BxY1opzAZAUDwtxg/edit" target="_blank">2a Sit.</button>
+  <button type="button" class="btn btn-warning" href="https://drive.google.com/drive/u/0/folders/1YKm9GaQIgMzo_XDvwvAqeHZNe1vXLXb0" target="_blank">2a Pasta</button>
 
 </div>
 			
