--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
     <div class="row">  <!-- ROW 1 -->
 	
 	
-	
       <div class="col p-3 mb-2 bg-success text-white">  <!-- ROW 1 COL 1 -->
 	    <h2>Diogo</h2>
 		<p><a href="https://drive.google.com/drive/folders/0B3EM8f4FmVDVd2lrYWFJbkh2eWM" class="btn btn-light " target="_blank">0 Diogo</a></p>
@@ -68,21 +67,23 @@
 		<p><a href="https://docs.google.com/spreadsheets/d/12xVp_1_l7I_B47DN7TLL7LJTXD3xO5tazaT_MeBtFuI/edit#gid=2004970932" class="btn btn-light " target="_blank">New YNAB</a></p>
 	      <p><a href="https://www.activobank.pt/" class="btn btn-light " target="_blank">ActivoBank</a></p>
 	      <p><a href="https://www.degiro.pt/" class="btn btn-light " target="_blank">Degiro</a></p>
-      </div> <!-- ROW 1 COL 1 -->
+      </div> <!-- END ROW 1 COL 1 -->
 	  
-	  <div class="col p-3 mb-2 bg-primary text-white" class="p-3 mb-2 bg-light text-dark"> <!-- ROW 2 COL 2 -->
+	  <div class="col p-3 mb-2 bg-primary text-white" class="p-3 mb-2 bg-light text-dark"> <!-- ROW 1 COL 2 -->
 		  <h2>Utilities</h2>
 		  <p><a href="https://cmd.autenticacao.gov.pt/Ama.Authentication.Frontend/Processes/DigitalSignature/DigitalSignatureIntro.aspx" class="btn btn-info">Assinar CC</a></p>
 		  <p><a href="https://dicionario.priberam.org/" class="btn btn-info">DLPO</a></p>
 		  <p><a href="https://www.coursera.org/learn/c-plus-plus-a/home/welcome" class="btn btn-info" target="_blank">Coursera C++</a></p>
 		  <p><a href="https://www.coursera.org/learn/mountains-101/home/welcome" class="btn btn-info" target="_blank">Coursera Mountains</a></p>
 		  <p><a href="https://repl.it/" class="btn btn-info" target="_blank">REPL</a></p>
-      </div> <!-- ROW 2 COL 2 -->
+      </div> <!-- END ROW 1 COL 2 -->
 	  
-
+<div class="col p-3 mb-2 bg-primary text-white" class="p-3 mb-2 bg-light text-dark"> <!-- ROW 1 COL 3 -->
+	<h2>Workspace</h2>
+	</div> <!-- END ROW 1 COL 3 -->
 	  
 	  
-    </div> <!-- ROW 1 -->
+    </div> <!-- END ROW 1 -->
 	<div class="row"> <!-- ROW 2 -->
 		<h1>FAP</h1>
 		<p><a href="https://drive.google.com/drive/folders/1m0BOFmBYbQ_HFFo6ByEMU2Dhe1SnHlvv" class="btn btn-dark" target="_blank">1 FAP</a></p>
@@ -104,30 +105,34 @@
                         * * * * * * * * * * * * * * * * * * * * * * * * * * * *
                         -->
 			<h2>GAL</h2>
-			<p><a href="https://drive.google.com/drive/u/0/folders/17KgcHZW_MtMIt4gJJbrmxbyEZ88rOcqR" class="btn btn-warning" target="_blank">CAL_GERAL</a></p>
-			<p><a href="https://docs.google.com/spreadsheets/d/1bDbXkXEn9OpHHnSd7lBGZ_BPPbB8iHIiP2Gxzereh9w/edit#gid=926774573" class="btn btn-warning" target="_blank">MapaGM</a></p>
+<div class="btn-group" role="group" aria-label="Basic example">
+  <a class="btn btn-warning" href="https://drive.google.com/drive/u/0/folders/17KgcHZW_MtMIt4gJJbrmxbyEZ88rOcqR" target="_blank">CAL_GERAL</a>
+  <a href="https://docs.google.com/spreadsheets/d/1bDbXkXEn9OpHHnSd7lBGZ_BPPbB8iHIiP2Gxzereh9w/edit#gid=926774573" class="btn btn-warning" target="_blank">MapaGM</a>
+</div>
+<div class="btn-group" role="group" aria-label="Basic example">
+  <a class="btn btn-warning" href="https://docs.google.com/spreadsheets/d/1kuu4KAE9U3_Yv5iaUZW2Bqc7tz9BxY1opzAZAUDwtxg/edit" target="_blank">2a Sit.</a>
+  <a class="btn btn-warning" href="https://drive.google.com/drive/u/0/folders/1YKm9GaQIgMzo_XDvwvAqeHZNe1vXLXb0" target="_blank">2a Pasta</a>
+</div>
+<div class="btn-group" role="group" aria-label="Basic example">
+  <a class="btn btn-warning" href="https://docs.google.com/spreadsheets/d/1BI0ma-TWWjkP6TwQ5AX-6SA8CXd36aO78owhYU9MZK0/edit#gid=0" target="_blank">3a Sit.</a>
+  <a class="btn btn-warning" href="https://drive.google.com/drive/u/0/folders/1_l2EcWKpUDNa7pkys1lj5MSqnQtAs6aX" target="_blank">3a Pasta</a>
+</div>
+<div class="btn-group" role="group" aria-label="Basic example">
+  <a class="btn btn-warning" href="https://docs.google.com/spreadsheets/d/1SWwyVVbVYnm6t-swrPKgx7k56XLBKLIC13cozDXg-SA/edit?usp=drive_web&ouid=110151906367241589539" target="_blank">6a Sit.</a>
+  <a class="btn btn-warning" href="https://drive.google.com/drive/u/0/folders/17ZYr2TKDHzBU5s-RcFVVYM_-7NR_3Czp" target="_blank">6a Pasta</a>
+</div>
+			
+			<p></p>
 			<p><a href="https://docs.google.com/spreadsheets/d/1b7t99eXhIRJP___EzeKOsrRGIcSbCFsGazUjI2ZKiWE/edit?usp=drive_web&ouid=112240959440930887189" class="btn btn-warning" target="_blank">SITUACAO CAL</a></p>
-			<p><a href="https://docs.google.com/spreadsheets/d/15EAcw_MduBwK-FjhLhNss2vG5VMHwt2BPHZ0qEYCT2A/edit#gid=1534277855" class="btn btn-warning" target="_blank">Planeamento COVID</a></p>
-			<p><a href="https://docs.google.com/spreadsheets/d/1lOvSeopVde8D3M-z51tZU2QcvGk7HKGxnqvnrJnHBag/edit#gid=794447412" class="btn btn-warning" target="_blank">Planeamento COVID Alunos</a></p>
 			<p><a href="https://docs.google.com/spreadsheets/d/1kus-tEzYA0n15rUuiBgUi2Oo_qtjyhgiNMjBmGo0dk8/edit?usp=drive_web&ouid=112240959440930887189" class="btn btn-warning" target="_blank">Contactos</a></p>
 			<p><a href="https://docs.google.com/spreadsheets/d/1GaNiOjvXLTyV3R_GgCYBXUrEbEl8jsYSKWxYdwWF4tw/edit#gid=777533230" class="btn btn-warning" target="_blank">Folha Transportes</a></p>
 			<p><a href="https://portalfap.emfa.pt/codigo-001.001.028.001.003" class="btn btn-warning" target="_blank">TAM (portal)</a></p>
 			<p><a href="https://drive.google.com/drive/u/1/folders/1pOzb9DoHOUvBH1APs7gZZfoHRkpbfdlu" class="btn btn-warning" target="_blank">cEsqlha 20/21</a></p>
-			<p><a href="https://docs.google.com/spreadsheets/d/1BI0ma-TWWjkP6TwQ5AX-6SA8CXd36aO78owhYU9MZK0/edit#gid=1588303051" class="btn btn-warning" target="_blank">3a SituacaoDiaria</a></p>
-			<p><a href="https://docs.google.com/spreadsheets/d/1kuu4KAE9U3_Yv5iaUZW2Bqc7tz9BxY1opzAZAUDwtxg/edit" class="btn btn-warning" target="_blank">2a SituacaoDiaria</a></p>
+
 			<p><a href="https://docs.google.com/document/d/1nc23T2iRwRdovNCU_Wz98ZXbfCwzs3Vm/edit" class="btn btn-warning" target="_blank">Agenda</a></p>
 
-<div class="btn-group" role="group" aria-label="Basic example">
-  <a class="btn btn-warning" href="https://docs.google.com/spreadsheets/d/1kuu4KAE9U3_Yv5iaUZW2Bqc7tz9BxY1opzAZAUDwtxg/edit" target="_blank">2a Sit.</a>
-  <a class="btn btn-warning" href="https://drive.google.com/drive/u/0/folders/1YKm9GaQIgMzo_XDvwvAqeHZNe1vXLXb0" target="_blank">2a Pasta</a>
 
-</div>
-			
-<div class="btn-group" role="group" aria-label="Basic example">
-  <button type="button" class="btn btn-warning" href="https://docs.google.com/spreadsheets/d/1kuu4KAE9U3_Yv5iaUZW2Bqc7tz9BxY1opzAZAUDwtxg/edit" target="_blank">2a Sit.</button>
-  <button type="button" class="btn btn-warning" href="https://drive.google.com/drive/u/0/folders/1YKm9GaQIgMzo_XDvwvAqeHZNe1vXLXb0" target="_blank">2a Pasta</button>
 
-</div>
 			
 	    </div> <!-- ROW 2 COL 2 -->
 		<div class="col p-3 mb-2 bg-warning text-dark" > <!-- ROW 2 COL 1 -->
