--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		  <p><a href="https://repl.it/" class="btn btn-info" target="_blank">REPL</a></p>
       </div> <!-- END ROW 1 COL 2 -->
 	  
-<div class="col p-3 mb-2 bg-primary text-white" class="p-3 mb-2 bg-light text-dark"> <!-- ROW 1 COL 3 -->
+<div class="col p-3 mb-2 bg-success text-white" class="p-3 mb-2 bg-light text-dark"> <!-- ROW 1 COL 3 -->
 	<h2>Workspace</h2>
 	</div> <!-- END ROW 1 COL 3 -->
 	  
@@ -146,8 +146,8 @@
 			<p><a href="https://docs.google.com/spreadsheets/d/1PkCbHPZL15isUy1t98_Smya07fXlJZqwgsQjtw8a5aA/edit#gid=986409403?authuser=akins.daos@gmail.com" class="btn btn-secondary" target="_blank">Alojamentos Mapa Geral</a></p>
 			<p><a href="https://docs.google.com/spreadsheets/u/1/d/12id0lmuaLKXLXz22UL7W8jgPBEG7zGZsgm4_--pREjY" class="btn btn-primary" target="_blank">Gestão anomalias</a></p>
 			<p><a href="https://docs.google.com/document/d/14DzfDypG4U-k18CdCz24FtbrH1YVjAIal2ES-TclxFM/edit#" class="btn btn-primary" target="_blank">Checklists</a></p>
-			<p><a href="https://docs.google.com/document/d/1je9lR-rtsGzWSg-p5SBIPxXPIUHRDQ0bGmM05V6n7Ms" class="btn btn-primary" target="_blank">Plano 20/21</a></p>
-			<p><a href="https://docs.google.com/spreadsheets/d/1dbjJHVEEC7-wPpGJ95rstnulzCu6Oq8oHEkBOBxqniE/edit#gid=1373721190?authuser=akins.daos@gmail.com" class="btn btn-secondary" target="_blank">Mapa Candidatos Verao 2020</a></p>
+			
+			
 
 			
 			
